api-go/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-go
  labels:
    app: api-go
spec:
  selector:
    matchLabels:
      app: api-go
  replicas: 1
  template:
    metadata:
      labels:
        app: api-go
    spec:
      containers:
        - name: api-go
          image: api_go
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "1000Mi"
              cpu: "1000m"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 20
            timeoutSeconds: 10
