api-go/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-go
  labels:
    app: api-go
spec:
  ports:
    - port: 80
      targetPort: 3000
      name: http
  selector:
    app: api-go
